--- a/main.css
+++ b/main.css
@@ -1,7 +1,10 @@
 table,tr,th,td,caption {
 border: 1px solid #eee;
-font-family: 'Courier New', Courier, monospace;
+font-family: 'Roboto', sans-serif;
 border-collapse: collapse;
 padding: 0.5rem;
 }
-div {font-family: 'Courier New', Courier, monospace;}
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+.introduction {font-family: 'Roboto', sans-serif; font-style: italic}
+h1 {font-family: 'Roboto', sans-serif;}
+.contacts {font-family: 'Roboto', sans-serif; font-size: small;}
