Fixed the glitch

--- a/main.css
+++ b/main.css
@@ -3,6 +3,8 @@ border: 1px solid #eee;
 font-family: 'Roboto', sans-serif;
 border-collapse: collapse;
 padding: 0.5rem;
+margin-left: auto;
+margin-right: auto;
 }
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 .introduction {font-family: 'Roboto', sans-serif; font-style: italic}
