--- a/main.css
+++ b/main.css
@@ -9,5 +9,5 @@ margin-right: auto;
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 .introduction {font-family: 'Roboto', sans-serif; font-style: italic}
 h1 {font-family: 'Roboto', sans-serif;
-    background: linear-gradient(300deg, #696c9b, #eee);}
+    background: linear-gradient(45deg, #3F51B5, #ff00e0);}
 .contacts {font-family: 'Roboto', sans-serif; font-size: small;}
